force-app/main/default/objects/TypeForm_metadata__mdt/TypeForm_metadata__mdt.object-meta.xml
<CustomObject>
    <label>TypeForm metadata</label>
    <pluralLabel>TypeForm metadata</pluralLabel>
</CustomObject>