force-app/main/default/objects/TypeForm_metadata__mdt/fields/Name_and_Email__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Email__c</fullName>
    <label>Name and Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>