force-app/main/default/objects/TypeForm_metadata__mdt/fields/Typeform_Email_From__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Email_From__c</fullName>
    <label>Typeform Email From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>