force-app/main/default/objects/TypeForm_metadata__mdt/fields/TypeForm_Emails__c.field-meta.xml
<CustomField>
    <fullName>TypeForm_Emails__c</fullName>
    <label>TypeForm Emails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>info@futurosf.org</fullName>
                <default>true</default>
                <label>info@futurosf.org</label>
            </value>
            <value>
                <fullName>contacto@pablojavkin.com.ar</fullName>
            </value>
            <value>
                <fullName>info@pulsomedia.com</fullName>
            </value>
            <value>
                <fullName>salud@provinciadesantafe.com</fullName>
            </value>
            <value>
                <fullName>info@pulsobrandsen.com</fullName>
            </value>
            <value>
                <fullName>martinllaryora@unidosporcordoba.com</fullName>
            </value>
            <value>
                <fullName>contacto@rosariovaalfrente.org</fullName>
            </value>
            <value>
                <fullName>victoriamontenegro@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>unidadciudadana@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>mariarosamuinos@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>marianorecalde@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>juancabandie@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>gabrielacerruti@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>danielfilmus@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>emiliojaton@frenteprogresista.org</fullName>
            </value>
            <value>
                <fullName>victorsantamaria@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>camauespinola@podemosmas.com</fullName>
            </value>
            <value>
                <fullName>martinbarrionuevo@podemosmas.com</fullName>
            </value>
            <value>
                <fullName>nitoartaza@podemosmas.com</fullName>
            </value>
            <value>
                <fullName>unidadportena@unidadciudad.com</fullName>
            </value>
            <value>
                <fullName>maipu@1pais.com.ar</fullName>
            </value>
            <value>
                <fullName>treslomas@1pais.com.ar</fullName>
            </value>
            <value>
                <fullName>saladillo@1pais.com.ar</fullName>
            </value>
            <value>
                <fullName>info@cuidemoscordoba.com</fullName>
            </value>
            <value>
                <fullName>sergiomassa@1pais.com.ar</fullName>
            </value>
            <value>
                <fullName>ariel.ciano@1pais.com.ar</fullName>
            </value>
            <value>
                <fullName>carlos@vamoscontrillo.com</fullName>
            </value>
            <value>
                <fullName>olavarria@1pais.com.ar</fullName>
            </value>
            <value>
                <fullName>info@vecinalismosanfernando.com.ar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>