force-app/main/default/objects/TypeForm_metadata__mdt/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use</label>
    <type>Checkbox</type>
</CustomField>